fix text-align

--- a/src/app/pages/analyses/analyses.component.scss
+++ b/src/app/pages/analyses/analyses.component.scss
@@ -60,9 +60,13 @@
     p {
       margin: 1.2em 0;
       padding: 0;
-      text-align: justify;
+    
+    @media (min-width: 601px) {
+      .element {
+        text-align: justify;
+      }
     }
-  
+  }
   
     #Ziclo {
       font-style: normal;
